src/app/globals.css
@import "tailwindcss";

@theme {
    --font-sans: var(--font-primary);
    --color-brand-black: #050505;
    --color-brand-charcoal: #111111;
    --color-brand-glass: rgba(20, 20, 20, 0.6);
    --color-brand-red: #ea0000;
}

:root {
    --background: #000000;
    --foreground: #ffffff;
}

body {
    color: var(--foreground);
    background: var(--background);
    font-family: var(--font-sans);
    line-height: 1.625;
    /* leading-relaxed */
    overflow-x: hidden;
}

/* Custom Scrollbar for "Cockpit" feel */
::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-track {
    background: #000;
}

::-webkit-scrollbar-thumb {
    background: #333;
    border-radius: 4px;
}

::-webkit-scrollbar-thumb:hover {
    background: #555;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

